--- a/index.css
+++ b/index.css
@@ -3,3 +3,10 @@ color:white;
 font-family: 'Lato', sans-serif;
 font-size: 20px;
 }
+.container{width:1000px;
+margin-left: auto;
+margin-right: auto;
+}
+.rectangle{width:960px;
+margin:20px;
+text-align:center;}
