--- a/index.css
+++ b/index.css
@@ -9,4 +9,10 @@ margin-right: auto;
 }
 .rectangle{width:960px;
 margin:20px;
-text-align:center;}
+text-align:center;
+}
+.logo{width:600px;
+float: left;
+text-align: left;
+font-size:70px;
+font-family: 'Josefin Sans', sans-serif;}
